--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   se-server:
     build: .
-    image: spaceengineers:latest
+    image: space-engineer:latest
     container_name: se-ds-docker
     restart: unless-stopped
     volumes:
@@ -19,11 +19,12 @@ services:
         protocol: udp
         mode: host
       - target: 8080
-        published: 18080
+        published: 8080
         protocol: tcp
         mode: host
     environment: 
       - WINEDEBUG=-all
       - INSTANCE_NAME=SE
+      - WORLD_NAME=World
       - PUBLIC_IP=127.0.0.1
       # public ip required for healthcheck
