--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
 
     volumes:
       # Montages persistants : NE PAS modifier les chemins de droite
-      - /appdata/space-engineers/plugins:/appdata/space-engineers/plugins
-      - /appdata/space-engineers/instances:/appdata/space-engineers/instances
-      - /appdata/space-engineers/SpaceEngineersDedicated:/appdata/space-engineers/SpaceEngineersDedicated
-      - /appdata/space-engineers/steamcmd:/root/.steam
+      - /space-engineers/plugins:/mnt/plugins
+      - /space-engineers/instances:/mnt/instances
+      - /space-engineers/SpaceEngineersDedicated:/mnt/SpaceEngineersDedicated
+      - /space-engineers/steamcmd:/home/authaurizeduser/.steam
 
     ports:
       # Ports en mode host pour compatibilité réseau
